k8s/payments-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-api
  namespace: fcg-payments
  labels:
    app: payments-api
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payments-api
  template:
    metadata:
      labels:
        app: payments-api
        version: v1
    spec:
      containers:
      - name: payments-api
        image: southamerica-east1-docker.pkg.dev/tech-challenge-fase-5-487617/fcg-payments/payments-api:latest
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
        
        imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: fcg-payments
  namespace: fcg
  labels:
    app: fcg-payments
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: fcg-payments
