k8s/payments-function-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-function
  namespace: fcg-payments
  labels:
    app: payments-function
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments-function
  template:
    metadata:
      labels:
        app: payments-function
        version: v1
    spec:
      containers:
      - name: payments-function
        image: southamerica-east1-docker.pkg.dev/tech-challenge-fase-5-487617/fcg-payments/payments-function:latest
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        
        imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: fcg-payments-function
  namespace: fcg
  labels:
    app: fcg-payments-function
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: fcg-payments-function
